<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--  haven't implemented settings yet
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/> -->

	<item
	    android:id="@+id/menu_left"
	    android:orderInCategory="100"
	    android:showAsAction="always"
	    android:title="@string/leftString" />
	
	<item
	    android:id="@+id/menu_right"
	    android:orderInCategory="100"
	    android:showAsAction="always"
	    android:title="@string/rightString" />

    <item 
        android:id= "@+id/menu_save"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/saveString"/>
    
    <item
        android:id="@+id/menu_new"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/newString"/>
    
    <item
        android:id="@+id/menu_load"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/loadString"/>
    
</menu>