<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    android:orientation="vertical"
    android:padding="10sp" >

    <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/saveTextEnter"
        android:maxWidth="100dp" />
	</TableRow>
	<TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/button1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/saveString" />
	</TableRow>
	<TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
		<Button
		    android:id="@+id/button2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/exitString" />

	</TableRow>
</TableLayout>